--- a/box.htm
+++ b/box.htm
@@ -29,34 +29,33 @@ topicArray = [
 <style>
 body {padding:0; margin:0;}
 
+.mainarea {width:auto; padding:20px; margin:1em auto; background: linear-gradient(to right,#FF8140,#FEDC75,#FF8140);}
 
-.container{
-	width:600px;
-	height:200px;
-	background:#FFFFFF;
-	border:medium gray solid;
+.send_weibo {width:600px; margin:2em auto; border:#666 1px solid; background:#EEE; border-radius:8px; padding:5px;  box-shadow: 0 0 25px 0 rgba(0,0,0,0.3)}
+
+.input {background:#FFF; border:#999 1px solid; padding:6px; border-radius:3px; box-shadow: 0 0 5px 0 rgba(0,0,0,0.2) inset;
+ }
+
+.input-box {display:block;width:auto; padding:0; margin:0; border:none; background-color:transparent;}
+
+.text-style {display:block;font:18px 'Arial','Microsoft YaHei';line-height:24px;overflow-x: hidden;overflow-y: auto; white-space:pre-wrap; word-break:break-all;}
+
+.func {height:auto;}
+.public-btn {
+	float:right;
+	background: rgb(255, 129, 64);
+	border: 1px solid rgb(247, 124, 61);
+	color: rgb(255, 255, 255);
+	box-shadow: 0px 1px 2px rgba(0,0,0,0.25);
+	text-decoration: none;
+	width: 60px;
+	border-radius: 0 0 8px 8px;
+	text-align: center;
+	padding: 5px 20px;
+	margin-right: 20px;
 }
 
-.new-weibo {
-}
-
-.text-box {
-	position:static;
-	top:15px;
-	left:;
-}
-
-
-.text-style {
-font: 18px 'Arial','Microsoft YaHei';
-line-height:24px;
-padding:5px;
-height:200px;
-width:500px;
-overflow-x: hidden;
-overflow-y: auto;
-
-}
+.clear {clear:both;}
 
 .atList {
 	position:absolute;
@@ -64,61 +63,63 @@ overflow-y: auto;
 	width:160px;
 	background:#FFF;
 	border:#ff9900 1px solid;
+	border-radius:3px;
+	box-shadow:1px 1px 4px #AAA; 
 }
 
-.atList.hidden {
-	background:gray;
-	display:none;
-}
+.atList.hidden {display:none;}
 
 .atList ul {
 	list-style:none;
-	padding:1px;
+	padding:5px 0;
 	margin:0px;
 }
 
-.atList .model {
-	display:none;
-}
+.atList .model {display:none;}
 
-.atList li {
-	padding:2px 2px 2px 2px;
-	color:#888;
-}
+.atList li {padding:3px 8px; color:#888;}
 
-.atList li:hover {
-	background:#EEE;
-	color:orange;
-}
+.atList li:hover {color:blue;}
 
-.atList li:after {
-	content:attr(data-name);
-}
+.atList li.foc {background:rgb(242, 242, 245);color: rgb(235, 115, 80);}
+
+.atList li:after {content:attr(data-name);}
 
 #textClone {
-	position:fixed;
+	position:absolute;
 	top:40px;
 	left:30px;
 	visibility:hidden;
+	background:gray;
 }
 
 </style>
  </head>
  <body>
-<div id="" class="container">
- <div class="new-weibo" style="">
-   <div class="text-box">
-   <textarea class="text-style" id="text" name="weibo-box" rows='4' style="width:100%;">
-   </textarea>
-   </div>
- </div>
 
-
+<div class="header">
+@@@@@@@
 </div>
 
-<div class="text-clone text-style" id="textClone" style="white-space:pre-wrap;">
+<div class="mainarea">
+	<div class="send_weibo">
+		<div class="input">
+			<textarea class="input-box text-style" id="text" name="weibo-box" rows='4' style="width:100%;"></textarea>
+		</div>
+		<div class="func_area">
+			<div class="func">
+				<a href="javascript:void(0);" class="public-btn">发布</a>
+				<div class="clear"></div>
+			</div>
+		</div>
+	</div>
 </div>
-<div class="atList" id="atList">
+
+
+<div class="text-clone text-style" id="textClone" style="white-space:pre-wrap; word-break:break-all;">
+</div>
+
+<div class="atList hidden" id="atList">
  <ul id="topics">
  <!--temp start-->
  <li data-name="qwe" class="model">qwe</li>
@@ -131,15 +132,36 @@ overflow-y: auto;
 
 texto = document.getElementById('text');
 texto.addEventListener('focus',function(){textBox.textParser();});
-texto.addEventListener('keyup',function(){textBox.textParser();});
-texto.addEventListener('keydown',function(){textBox.textParser();});
-texto.addEventListener('mouseup',function(){textBox.textParser();});
+
+texto.addEventListener('blur',function(){
+	if(!atList.mouseHover){
+		atList.hideList();
+	}
+});
+
 texto.addEventListener('input',function(){textBox.textParser();});
+texto.addEventListener('mouseup',function(){textBox.textParser();});
 
+texto.addEventListener('keyup'  ,function(e){keyPressEvent(e);});
+texto.addEventListener('keydown',function(e){keyPressEvent(e);});
 
+//locate `text-clone`
+function resizeCloneBox(){
+	tc = document.getElementById('textClone');
+	ta = document.getElementById('text');
+	xp = ta.offsetLeft;
+	yp = ta.offsetTop;
+	hp = ta.offsetHeight;
+	wp = ta.offsetWidth;
+	tc.style.top = (yp)+'px';
+	tc.style.left= xp+'px';
+	tc.style.height= hp+'px';
+	tc.style.width = wp+'px';
+}
 
 textBox = {
 	'texto':document.getElementById('text'),
+	'focusPos':0,
 
 	'textParser':function(){
 		el = this.texto;
@@ -148,10 +170,15 @@ textBox = {
 
 		strPos = this.findAtString(sel.start);
 		if(strPos){
+			resizeCloneBox();
 			kw = el.value.substring(strPos.startPos,strPos.curPos);
 			curPx = this.getCursorXY();
-			
 			atList.showList(kw,curPx.left,curPx.top);
+			
+			kw = el.value.substring(strPos.startPos,strPos.curPos);
+			curPx = this.getCursorXY();
+			atList.showList(kw,curPx.left,curPx.top);
+
 		}else{
 			atList.hideList();
 		}
@@ -175,7 +202,9 @@ textBox = {
 		clo.innerHTML = cont.substring(0,pos.atPos) + '<span>|</span>' + cont.substring(pos.atPos);
 		
 		spanElem = clo.getElementsByTagName('span')[0];
-		return {'top': spanElem.offsetTop+spanElem.offsetHeight, 'left':spanElem.offsetLeft};
+		return {
+			'top': clo.offsetTop+spanElem.offsetTop+spanElem.offsetHeight-this.texto.scrollTop, 'left':clo.offsetLeft+spanElem.offsetLeft
+		};
 	},
 
 
@@ -198,7 +227,7 @@ textBox = {
 				break;
 			}
 		}
-		if(i<=0){
+		if(i<0){
 			return false;
 		}
 
@@ -247,6 +276,15 @@ textBox = {
 		atList.hideList();
 	},
 
+	'backSpace':function(){
+		focus=this.getCursor().start;
+		cont = this.texto.value;
+		this.texto.value = cont.substring(0,focus-1) + cont.substring(focus);
+		this.setCursor(focus-1);
+
+	},
+
+
 
 	//console.log(strPos?(strPos.startPos+'%'+strPos.endPos):'none');
 	//console.log(replaceAtString(el.value, sel.start,'Cool# @ 、你 的产生的都是到付到付看您的v你看DVN'));
@@ -256,6 +294,10 @@ textBox = {
 atList = 
 {
 	'node':document.getElementById('atList'),
+	'display' :0,
+	'selectedIndex':0,
+	'mouseHover':0,
+
 	'showList':function(keyword,leftPx,topPx){
 		el = this.node;
 		if(el.className.search('hidden')>=0){
@@ -264,6 +306,8 @@ atList =
 		el.style.top  =(topPx+10) +'px';
 		el.style.left =leftPx+'px';
 		this.loadList(keyword);
+		this.setSelected(0);
+		this.display=1;
 	},
 
 	'hideList':function(){
@@ -271,6 +315,8 @@ atList =
 		if(el.className.search('hidden')==-1){
 			el.className += ' hidden';
 		}
+		this.setSelected(0);
+		this.display=0;
 	},
 
 	'loadList':function(keyword){
@@ -295,6 +341,7 @@ atList =
 			mo.dataset.name = tp;
 			mo.className = 'enabled';
 			mo.addEventListener('click',topicItemClickEvent);
+			mo.addEventListener('mouseover',mouseMoveEvent);
 			ulElem.appendChild(mo);
 		}
 	},
@@ -303,6 +350,44 @@ atList =
 		if(checked.search(keyword)+1)
 		return true;
 	},
+
+	'setSelected':function(index){
+		if(index===undefined) return false;
+		ulNodes = this.node.getElementsByClassName('enabled');
+
+		if(ulNodes[this.selectedIndex].className.indexOf('foc')==-1){
+			this.selectedIndex = this.getSelected()||0;
+		}
+		selNode = ulNodes[this.selectedIndex];
+		selNode.className = selNode.className.replace('foc','');
+
+		if(index>=ulNodes.length){
+			index=0;
+		}else if(index<0){
+			index=ulNodes.length-1;
+		}
+		ulNodes[index].className += ' foc';
+		this.selectedIndex=index;
+	},
+
+	'clearSelected':function(){
+		fns = this.node.getElementsByClassName('foc');
+		if(fns.length){
+			sn = fns[0];
+			sn.className = sn.className.replace('foc','');
+		}
+	},
+
+	'getSelected':function(){
+		ns = this.node.getElementsByClassName('enabled');
+		for(var i=0;i<ns.length;i++){
+			if(ns[i].className.indexOf('foc')+1){
+				//this.selectedIndex = i;
+				return i;
+			}
+		}
+	},
+
 
 	'topicArray': [
 	'央视新闻',
@@ -319,9 +404,55 @@ atList =
 
 }
 
+atList.node.addEventListener('mouseover',function(){atList.mouseHover=1});
+atList.node.addEventListener('mouseout',function(){atList.mouseHover=0});
+
 function topicItemClickEvent(){
 	textBox.completeAtString(this.dataset.name,textBox.getCursor().start);
 }
+
+function mouseMoveEvent(e){
+	atList.clearSelected();
+	ns = atList.node.getElementsByClassName('enabled');
+	for(var i=0;i<ns.length;i++){
+		if(ns[i]==e.target){
+			atList.setSelected(i);
+			break;
+		}
+	}
+	//console.log(i);
+}
+
+function keyPressEvent(e){
+	console.log(e);
+	if(atList.display){
+		if(e.keyCode==38){
+			textBox.setCursor(textBox.focusPos);
+			if(e.type=='keydown'){
+				atList.setSelected(atList.selectedIndex-1);
+			}
+		}else if(e.keyCode==40){
+			textBox.setCursor(textBox.focusPos);
+			if(e.type=='keydown'){
+				atList.setSelected(atList.selectedIndex+1);
+			}
+		}else if(e.keyCode==13){
+			textBox.setCursor(textBox.focusPos);
+			if(e.type=='keydown'){
+				topicItemClickEvent.call(atList.node.getElementsByClassName('enabled')[atList.selectedIndex]);
+				//textBox.backSpace();
+			}
+		}else{
+			textBox.focusPos = textBox.getCursor().start;
+			textBox.textParser();
+		}
+	}else{
+		textBox.focusPos = textBox.getCursor().start;
+		textBox.textParser();
+	}
+}
+	
+
 
 clo = document.getElementById('textClone');
 texto=document.getElementById('text');
