--- a/box.htm
+++ b/box.htm
@@ -135,7 +135,7 @@ texto.addEventListener('focus',function(){textBox.textParser();});
 
 texto.addEventListener('blur',function(){
 	if(!atList.mouseHover){
-		atList.hideList();
+		atList.hideList.call(atList);
 	}
 });
 
@@ -159,12 +159,18 @@ function resizeCloneBox(){
 	tc.style.width = wp+'px';
 }
 
+
+function topicItemClickEvent(){
+	textBox.completeAtString(this.dataset.name,textBox.getCursor().start);
+}
+
+
 textBox = {
 	'texto':document.getElementById('text'),
 	'focusPos':0,
 
 	'textParser':function(){
-		el = this.texto;
+		var el = this.texto;
 
 		sel=this.getCursor();
 
@@ -173,14 +179,14 @@ textBox = {
 			resizeCloneBox();
 			kw = el.value.substring(strPos.startPos,strPos.curPos);
 			curPx = this.getCursorXY();
-			atList.showList(kw,curPx.left,curPx.top);
+			atList.showList.call(atList,kw,curPx.left,curPx.top);
 			
 			kw = el.value.substring(strPos.startPos,strPos.curPos);
 			curPx = this.getCursorXY();
-			atList.showList(kw,curPx.left,curPx.top);
+			atList.showList.call(atList,kw,curPx.left,curPx.top);
 
 		}else{
-			atList.hideList();
+			atList.hideList.call(atList);
 		}
 	},
 
@@ -273,7 +279,7 @@ textBox = {
 		}else{
 			
 		}
-		atList.hideList();
+		atList.hideList.call(atList);
 	},
 
 	'backSpace':function(){
@@ -299,7 +305,7 @@ atList =
 	'mouseHover':0,
 
 	'showList':function(keyword,leftPx,topPx){
-		el = this.node;
+		var el = this.node;
 		if(el.className.search('hidden')>=0){
 			el.className = el.className.replace('hidden','');
 		}
@@ -311,7 +317,7 @@ atList =
 	},
 
 	'hideList':function(){
-		el = this.node;
+		var el = this.node;
 		if(el.className.search('hidden')==-1){
 			el.className += ' hidden';
 		}
@@ -320,7 +326,7 @@ atList =
 	},
 
 	'loadList':function(keyword){
-		el = this.node;
+		var el = this.node;
 		ulElem = document.getElementById('topics');
 		liModel = document.getElementById('topics').getElementsByClassName('model')[0];
 
@@ -354,11 +360,12 @@ atList =
 	'setSelected':function(index){
 		if(index===undefined) return false;
 		ulNodes = this.node.getElementsByClassName('enabled');
-
+	
+		if(ulNodes.length ==0 ) return false;
 		if(ulNodes[this.selectedIndex].className.indexOf('foc')==-1){
 			this.selectedIndex = this.getSelected()||0;
 		}
-		selNode = ulNodes[this.selectedIndex];
+		selNode = ulNodes[atList.selectedIndex];
 		selNode.className = selNode.className.replace('foc','');
 
 		if(index>=ulNodes.length){
@@ -407,16 +414,12 @@ atList =
 atList.node.addEventListener('mouseover',function(){atList.mouseHover=1});
 atList.node.addEventListener('mouseout',function(){atList.mouseHover=0});
 
-function topicItemClickEvent(){
-	textBox.completeAtString(this.dataset.name,textBox.getCursor().start);
-}
-
 function mouseMoveEvent(e){
-	atList.clearSelected();
+	atList.clearSelected.call(atList);
 	ns = atList.node.getElementsByClassName('enabled');
 	for(var i=0;i<ns.length;i++){
 		if(ns[i]==e.target){
-			atList.setSelected(i);
+			atList.setSelected.call(atList,i);
 			break;
 		}
 	}
@@ -424,17 +427,17 @@ function mouseMoveEvent(e){
 }
 
 function keyPressEvent(e){
-	console.log(e);
+	//console.log(e);
 	if(atList.display){
 		if(e.keyCode==38){
 			textBox.setCursor(textBox.focusPos);
 			if(e.type=='keydown'){
-				atList.setSelected(atList.selectedIndex-1);
+				atList.setSelected.call(atList,atList.selectedIndex-1);
 			}
 		}else if(e.keyCode==40){
 			textBox.setCursor(textBox.focusPos);
 			if(e.type=='keydown'){
-				atList.setSelected(atList.selectedIndex+1);
+				atList.setSelected.call(atList,atList.selectedIndex+1);
 			}
 		}else if(e.keyCode==13){
 			textBox.setCursor(textBox.focusPos);
