--- a/box.htm
+++ b/box.htm
@@ -431,16 +431,19 @@ function keyPressEvent(e){
 	if(atList.display){
 		if(e.keyCode==38){
 			textBox.setCursor(textBox.focusPos);
+			e.preventDefault();
 			if(e.type=='keydown'){
 				atList.setSelected.call(atList,atList.selectedIndex-1);
 			}
 		}else if(e.keyCode==40){
 			textBox.setCursor(textBox.focusPos);
+			e.preventDefault();
 			if(e.type=='keydown'){
 				atList.setSelected.call(atList,atList.selectedIndex+1);
 			}
 		}else if(e.keyCode==13){
 			textBox.setCursor(textBox.focusPos);
+			e.preventDefault();
 			if(e.type=='keydown'){
 				topicItemClickEvent.call(atList.node.getElementsByClassName('enabled')[atList.selectedIndex]);
 				//textBox.backSpace();
